# ovm-pk

./: .gitattributes  .gitignore  LICENSE  README.md  environment.yml  jobs.txt  ovm_pk_prd_v2.md  project_prompt.md  protein_ligand_env.md  protein_ligand_env.py  pyproject.toml  pytest-rich.txt  pytest.ini  setup.py
configs/: benchmark.yaml  box18.yaml  default.yaml  fast_test.yaml  final_md_prep.yaml  flexible_example.yaml  heme_focus.yaml  heme_focus9.yaml  heme_focus9_s11.yaml  heme_focus9_s123.yaml  heme_focus9_s42.yaml  heme_focus9_s7.yaml  heme_focus9_s99.yaml  heme_focus_smoke.yaml  ligand_enzyme_profiles.yaml  prod_test.yaml
docs/: pipeline_stages.md
forcefields/: shahrokh_heme_ic6.ffxml  shahrokh_heme_ic6_unl.ffxml
local_scripts/: md_gpu_prepare.py
mcpb_clean/: Fe3.mol2  HEM.mol2  heme_cys_large.fingerprint  heme_cys_large_mk.com  heme_cys_large_mk.inp  heme_cys_mcpbpy_pre.frcmod  heme_cys_small_fc.com  heme_cys_small_fc.inp  heme_cys_small_opt.com  heme_cys_small_opt.inp  heme_cys_standard.fingerprint  heme_noFe_h.mol2  heme_sybyl.mol2  heme_tmp.mol2  mcpb.in  resp1.in  resp2.in
prep/: mcpb.in  mcpb.in.bak
reports/: simple_results.csv
runlogs/: env.lock.yml  versions.txt
scripts/: activate_all.sh  activate_gnina.sh  autopocket.py  bootstrap.sh  create_or_update_env.sh  env_manager.py  fetch_and_run.py  freeze_env.sh  generate_report.py  generate_simple_report.py  install_hooks.sh  install_system_deps.sh  md_gpu_prepare.py  md_gpu_run.py  minimal_metal_system.py  run_flexible.py  run_md.py  run_pipeline.py  run_pipeline_simple.py  run_with_logging.py  save_env_lock.sh
tests/: conftest.py  test_artifacts.py  test_benchmark_affinity.py  (+25 more)
(+147 files in other folders)
